--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,11 +13,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"/Users/emilianogtlp/Documents/proyectos/dsc_datathon_23/dataset_transacc_tdc_tdd_20230309.csv\", parse_dates=['fecha_transaccion'])"
+    "# df = pd.read_csv(\"/Users/emilianogtlp/Documents/proyectos/dsc_datathon_23/dataset_transacc_tdc_tdd_20230309.csv\", parse_dates=['fecha_transaccion'])\n",
+    "df = pd.read_csv(\"dataset_transacc_tdc_tdd_20230309.csv\", parse_dates=['fecha_transaccion'])"
    ]
   },
   {
@@ -462,116 +463,177 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
+       "<style type=\"text/css\">\n",
        "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
+       "<table id=\"T_be3de\">\n",
+       "  <caption>Summary Statistics of Numeric Variables</caption>\n",
        "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id_cliente</th>\n",
-       "      <th>anio</th>\n",
-       "      <th>mes</th>\n",
-       "      <th>monto_transaccion</th>\n",
+       "    <tr>\n",
+       "      <th class=\"blank level0\" >&nbsp;</th>\n",
+       "      <th id=\"T_be3de_level0_col0\" class=\"col_heading level0 col0\" >monto_transaccion</th>\n",
+       "      <th id=\"T_be3de_level0_col1\" class=\"col_heading level0 col1\" >edad_cliente</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>count</th>\n",
-       "      <td>37380.000000</td>\n",
-       "      <td>37380.000000</td>\n",
-       "      <td>37380.000000</td>\n",
-       "      <td>37380.000000</td>\n",
+       "      <th id=\"T_be3de_level0_row0\" class=\"row_heading level0 row0\" >count</th>\n",
+       "      <td id=\"T_be3de_row0_col0\" class=\"data row0 col0\" >358360.000000</td>\n",
+       "      <td id=\"T_be3de_row0_col1\" class=\"data row0 col1\" >358360.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>mean</th>\n",
-       "      <td>4988.795425</td>\n",
-       "      <td>2022.610112</td>\n",
-       "      <td>5.657517</td>\n",
-       "      <td>1645.245073</td>\n",
+       "      <th id=\"T_be3de_level0_row1\" class=\"row_heading level0 row1\" >mean</th>\n",
+       "      <td id=\"T_be3de_row1_col0\" class=\"data row1 col0\" >171.613073</td>\n",
+       "      <td id=\"T_be3de_row1_col1\" class=\"data row1 col1\" >33.647918</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>std</th>\n",
-       "      <td>2891.762916</td>\n",
-       "      <td>0.487731</td>\n",
-       "      <td>4.747960</td>\n",
-       "      <td>1938.567629</td>\n",
+       "      <th id=\"T_be3de_level0_row2\" class=\"row_heading level0 row2\" >std</th>\n",
+       "      <td id=\"T_be3de_row2_col0\" class=\"data row2 col0\" >187.012943</td>\n",
+       "      <td id=\"T_be3de_row2_col1\" class=\"data row2 col1\" >11.956654</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>min</th>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>2022.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>10.000000</td>\n",
+       "      <th id=\"T_be3de_level0_row3\" class=\"row_heading level0 row3\" >min</th>\n",
+       "      <td id=\"T_be3de_row3_col0\" class=\"data row3 col0\" >10.000000</td>\n",
+       "      <td id=\"T_be3de_row3_col1\" class=\"data row3 col1\" >1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>25%</th>\n",
-       "      <td>2477.750000</td>\n",
-       "      <td>2022.000000</td>\n",
-       "      <td>2.000000</td>\n",
-       "      <td>395.350000</td>\n",
+       "      <th id=\"T_be3de_level0_row4\" class=\"row_heading level0 row4\" >25%</th>\n",
+       "      <td id=\"T_be3de_row4_col0\" class=\"data row4 col0\" >48.370000</td>\n",
+       "      <td id=\"T_be3de_row4_col1\" class=\"data row4 col1\" >26.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>50%</th>\n",
-       "      <td>4978.000000</td>\n",
-       "      <td>2023.000000</td>\n",
-       "      <td>3.000000</td>\n",
-       "      <td>985.090000</td>\n",
+       "      <th id=\"T_be3de_level0_row5\" class=\"row_heading level0 row5\" >50%</th>\n",
+       "      <td id=\"T_be3de_row5_col0\" class=\"data row5 col0\" >98.680000</td>\n",
+       "      <td id=\"T_be3de_row5_col1\" class=\"data row5 col1\" >31.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>75%</th>\n",
-       "      <td>7498.250000</td>\n",
-       "      <td>2023.000000</td>\n",
-       "      <td>11.000000</td>\n",
-       "      <td>2183.062500</td>\n",
+       "      <th id=\"T_be3de_level0_row6\" class=\"row_heading level0 row6\" >75%</th>\n",
+       "      <td id=\"T_be3de_row6_col0\" class=\"data row6 col0\" >224.270000</td>\n",
+       "      <td id=\"T_be3de_row6_col1\" class=\"data row6 col1\" >38.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>max</th>\n",
-       "      <td>10000.000000</td>\n",
-       "      <td>2023.000000</td>\n",
-       "      <td>12.000000</td>\n",
-       "      <td>32105.150000</td>\n",
+       "      <th id=\"T_be3de_level0_row7\" class=\"row_heading level0 row7\" >max</th>\n",
+       "      <td id=\"T_be3de_row7_col0\" class=\"data row7 col0\" >5000.000000</td>\n",
+       "      <td id=\"T_be3de_row7_col1\" class=\"data row7 col1\" >123.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
-       "</table>\n",
-       "</div>"
+       "</table>\n"
       ],
       "text/plain": [
-       "         id_cliente          anio           mes  monto_transaccion\n",
-       "count  37380.000000  37380.000000  37380.000000       37380.000000\n",
-       "mean    4988.795425   2022.610112      5.657517        1645.245073\n",
-       "std     2891.762916      0.487731      4.747960        1938.567629\n",
-       "min        1.000000   2022.000000      1.000000          10.000000\n",
-       "25%     2477.750000   2022.000000      2.000000         395.350000\n",
-       "50%     4978.000000   2023.000000      3.000000         985.090000\n",
-       "75%     7498.250000   2023.000000     11.000000        2183.062500\n",
-       "max    10000.000000   2023.000000     12.000000       32105.150000"
+       "<pandas.io.formats.style.Styler at 0x7f8938402980>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "clients.describe()"
+    "numeric_summary_df = df\n",
+    "numeric_summary_df = df[['monto_transaccion', 'edad_cliente']]\n",
+    "pd.DataFrame(numeric_summary_df.describe()).style.set_caption(\"Summary Statistics of Numeric Variables\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style type=\"text/css\">\n",
+       "</style>\n",
+       "<table id=\"T_9699a\">\n",
+       "  <caption>Summary Statistics of Categorical Variables</caption>\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th class=\"blank level0\" >&nbsp;</th>\n",
+       "      <th id=\"T_9699a_level0_col0\" class=\"col_heading level0 col0\" >count</th>\n",
+       "      <th id=\"T_9699a_level0_col1\" class=\"col_heading level0 col1\" >unique</th>\n",
+       "      <th id=\"T_9699a_level0_col2\" class=\"col_heading level0 col2\" >top</th>\n",
+       "      <th id=\"T_9699a_level0_col3\" class=\"col_heading level0 col3\" >freq</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th id=\"T_9699a_level0_row0\" class=\"row_heading level0 row0\" >tipo_transaccion</th>\n",
+       "      <td id=\"T_9699a_row0_col0\" class=\"data row0 col0\" >358360</td>\n",
+       "      <td id=\"T_9699a_row0_col1\" class=\"data row0 col1\" >2</td>\n",
+       "      <td id=\"T_9699a_row0_col2\" class=\"data row0 col2\" >TDD</td>\n",
+       "      <td id=\"T_9699a_row0_col3\" class=\"data row0 col3\" >209698</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_9699a_level0_row1\" class=\"row_heading level0 row1\" >nombre_comercio</th>\n",
+       "      <td id=\"T_9699a_row1_col0\" class=\"data row1 col0\" >358360</td>\n",
+       "      <td id=\"T_9699a_row1_col1\" class=\"data row1 col1\" >84774</td>\n",
+       "      <td id=\"T_9699a_row1_col2\" class=\"data row1 col2\" >MERCADO PAGO          CIUDAD DE MEXDF</td>\n",
+       "      <td id=\"T_9699a_row1_col3\" class=\"data row1 col3\" >8816</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_9699a_level0_row2\" class=\"row_heading level0 row2\" >giro_nombre</th>\n",
+       "      <td id=\"T_9699a_row2_col0\" class=\"data row2 col0\" >358360</td>\n",
+       "      <td id=\"T_9699a_row2_col1\" class=\"data row2 col1\" >28</td>\n",
+       "      <td id=\"T_9699a_row2_col2\" class=\"data row2 col2\" >RETAIL</td>\n",
+       "      <td id=\"T_9699a_row2_col3\" class=\"data row2 col3\" >69381</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_9699a_level0_row3\" class=\"row_heading level0 row3\" >mcc_nombre</th>\n",
+       "      <td id=\"T_9699a_row3_col0\" class=\"data row3 col0\" >358360</td>\n",
+       "      <td id=\"T_9699a_row3_col1\" class=\"data row3 col1\" >294</td>\n",
+       "      <td id=\"T_9699a_row3_col2\" class=\"data row3 col2\" >AGREGADOR</td>\n",
+       "      <td id=\"T_9699a_row3_col3\" class=\"data row3 col3\" >38739</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_9699a_level0_row4\" class=\"row_heading level0 row4\" >ope_pais</th>\n",
+       "      <td id=\"T_9699a_row4_col0\" class=\"data row4 col0\" >358360</td>\n",
+       "      <td id=\"T_9699a_row4_col1\" class=\"data row4 col1\" >77</td>\n",
+       "      <td id=\"T_9699a_row4_col2\" class=\"data row4 col2\" >MX</td>\n",
+       "      <td id=\"T_9699a_row4_col3\" class=\"data row4 col3\" >338768</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_9699a_level0_row5\" class=\"row_heading level0 row5\" >entry_mode</th>\n",
+       "      <td id=\"T_9699a_row5_col0\" class=\"data row5 col0\" >358360</td>\n",
+       "      <td id=\"T_9699a_row5_col1\" class=\"data row5 col1\" >2</td>\n",
+       "      <td id=\"T_9699a_row5_col2\" class=\"data row5 col2\" >CARD PRESENT</td>\n",
+       "      <td id=\"T_9699a_row5_col3\" class=\"data row5 col3\" >227208</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_9699a_level0_row6\" class=\"row_heading level0 row6\" >sexo_cliente</th>\n",
+       "      <td id=\"T_9699a_row6_col0\" class=\"data row6 col0\" >358360</td>\n",
+       "      <td id=\"T_9699a_row6_col1\" class=\"data row6 col1\" >3</td>\n",
+       "      <td id=\"T_9699a_row6_col2\" class=\"data row6 col2\" >M</td>\n",
+       "      <td id=\"T_9699a_row6_col3\" class=\"data row6 col3\" >244682</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_9699a_level0_row7\" class=\"row_heading level0 row7\" >estado_cliente</th>\n",
+       "      <td id=\"T_9699a_row7_col0\" class=\"data row7 col0\" >358360</td>\n",
+       "      <td id=\"T_9699a_row7_col1\" class=\"data row7 col1\" >32</td>\n",
+       "      <td id=\"T_9699a_row7_col2\" class=\"data row7 col2\" >NUEVO LEON</td>\n",
+       "      <td id=\"T_9699a_row7_col3\" class=\"data row7 col3\" >79696</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n"
+      ],
+      "text/plain": [
+       "<pandas.io.formats.style.Styler at 0x7f88f6276770>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "# TODO: Change/add date column to represent by year, month, day\n",
+    "categorical_summary_df = df.select_dtypes('object')\n",
+    "pd.DataFrame(categorical_summary_df.describe().T).style.set_caption('Summary Statistics of Categorical Variables')"
    ]
   },
   {
@@ -76580,7 +76642,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4
  },
